backend/sample/src/main/java/com/sample/advice/error/DefaultNullPointerException.java
package com.sample.advice.error;

import com.sample.advice.payload.ErrorCode;

import lombok.Getter;

@Getter
public class DefaultNullPointerException extends NullPointerException{
    
    private ErrorCode errorCode;

    public DefaultNullPointerException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
